What's New in Python 2.2.2?
Release date: dd-mmm-2002
===========================

Core and builtins

- Repaired a slow memory leak possible only in programs creating a
  great many cyclic structures involving frames.  Reported on
  SourceForge as bug 543148.

- Complex numbers supported divmod() and the // and % operators, but
  these make no sense.  Since this was documented, they're being
  deprecated now.

- String methods lstrip(), rstrip() and strip() now take an optional
  argument that specifies the characters to strip.  For example,
  "Foo!!!?!?!?".rstrip("?!") -> "Foo". In addition, "200L".strip("L") 
  will return "200". This is useful for replacing code that assumed
  longs will always be printed with a trailing "L".

Library


C API


Windows

- Sometimes the uninstall executable (UNWISE.EXE) vanishes.  One cause
  of that has been fixed in the installer (disabled Wise's "delete in-
  use files" uninstall option).


What's New in Python 2.2.1 final?
Release date: 10-Apr-2002
=================================

Core and builtins

- Added new builtin function bool() and new builtin constants True and
  False to ease backporting of code developed for Python 2.3.  In 2.2,
  bool() returns 1 or 0, True == 1, and False == 0.

- Fixed super() to work correctly with class methods.  [SF bug #535444]

- Fixed two bugs reported as SF #535905: under certain conditions,
  deallocating a deeply nested structure could cause a segfault in the
  garbage collector, due to interaction with the "trashcan" code;
  access to the current frame during destruction of a local variable
  could access a pointer to freed memory.

Library

- The xml.sax.expatreader.ExpatParser class will no longer create
  circular references by using itself as the locator that gets passed
  to the content handler implementation.  [SF bug #535474]

C API

- A type can now inherit its metatype from its base type.  Previously,
  when PyType_Ready() was called, if ob_type was found to be NULL, it